--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "elderly-pupulation",
+  "name": "nomash-library",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -11,7 +11,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "vue": "^3.4.29"
+    "@primevue/themes": "^4.0.4",
+    "bootstrap": "^5.3.3",
+    "primevue": "^4.0.4",
+    "vue": "^3.4.29",
+    "vue-router": "^4.4.3"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
@@ -20,7 +24,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
     "prettier": "^3.2.5",
-    "vite": "^5.3.1",
+    "vite": "^5.4.2",
     "vite-plugin-vue-devtools": "^7.3.1"
   }
 }
